force-app/main/default/objects/Product_Campaign_Recommend__c/Product_Campaign_Recommend__c.object-meta.xml
<CustomObject>
    <label>Commercial Next Best Offer</label>
    <nameField>
        <displayFormat>PG-{0000}</displayFormat>
        <label>Commercial NBO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Next Best Offer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>