force-app/main/default/objects/Product_Campaign_Recommend__c/fields/AccountAccount__c.field-meta.xml
<CustomField>
    <fullName>AccountAccount__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Guideline</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>