force-app/main/default/objects/Product_Campaign_Recommend__c/fields/Product_Name_Low_Priority__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Low_Priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name (Low Priority)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>