force-app/main/default/objects/Product_Campaign_Recommend__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cross Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>