force-app/main/default/objects/Product_Campaign_Recommend__c/validationRules/Check_existing_customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_existing_customer</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(AccountAccount__r.Account_Type__c)  &lt;&gt; &apos;Existing Customer&apos;</errorConditionFormula>
    <errorMessage>Product recommend can be add to existing customer only</errorMessage>
</ValidationRule>